[package]
name = "orasync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
aws-config = "0.8.0"
aws-types = "0.8.0"
aws-sdk-s3 = "0.8.0"
azure_core = "0.3.0"
azure_storage = "0.4.0"
azure_storage_blobs = "0.4.0"
openssl = { version = "0.10", features = ["vendored"] }
